--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
 # YouTube API Key
-YOUTUBE_API_KEY=your_youtube_api_key_here
+YOUTUBE_API_KEY=st.secretS["youtube_api_key"]
 
 # TMDB API Key
-TMDB_API_KEY=your_tmdb_api_key_here
-
-# TMDB Bearer Token
-TMDB_BEARER_TOKEN=your_tmdb_bearer_token_here
+TMDB_API_KEY=st.secrets["tmdb_api_key"]
+TMDB_ACCESS_TOKEN=st.secrets["tmdb_access_token"]
 
 # OMDB API Key
-OMDB_API_KEY=your_omdb_api_key_here 
+OMDB_API_KEY=st.secrets["omdb_api_key"]
