--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # YouTube API Key
-YOUTUBE_API_KEY=st.secretS["youtube_api_key"]
+YOUTUBE_API_KEY=st.secrets["youtube_api_key"]
 
 # TMDB API Key
 TMDB_API_KEY=st.secrets["tmdb_api_key"]
